fixed color change on hover
previously unreadable due to light color blending into bg

--- a/sass/layout/_coin-nav.scss
+++ b/sass/layout/_coin-nav.scss
@@ -11,7 +11,7 @@
 		cursor: pointer;
 
 		&:hover {
-			color: var(--light-text-color);
+			color: var(--light-detail-color);
 		}
 	}
 }
